Clean up project structure

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,3 @@
-@import './base/page.scss';
-@import './base/content.scss';
-
-@import './vendor/normalize.scss';
+@import './base/index';
+@import './vendor/index';
+@import './pages/index';
