--- a/src/styles/pages/journal.scss
+++ b/src/styles/pages/journal.scss
@@ -7,9 +7,10 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 2rem;
-    height: 2rem;
+    width: 100%;
+    height: 100%;
     opacity: 0;
+    cursor: pointer;
   }
 
   td input + label::before {
@@ -23,15 +24,19 @@
 
   td input + label::after {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 0;
+    height: 0;
     content: '';
+    transition: .3s ease;
   }
 
   td input:checked + label::after {
     background: tomato;
+    width: 100%;
+    height: 100%;
   }
 
   .first-col {
