--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,14 +1,10 @@
 
 .home {
-  position: relative;
-  width: 100%;
-  height: 100%;
-
   .block {
     position: absolute;
     cursor: pointer;
     transition: .3s linear;
-    border: 1px solid tomato;
+    border: 2px solid black;
 
     a {
       display: grid;
@@ -19,39 +15,24 @@
   }
 
   .block-1 {
-    top: 0;
-    left: 0;
-    width: 60%;
-    height: 40%;
+    border-right: 2px solid transparent;
   }
 
   .block-2 {
-    top: 0;
-    right: 0;
-    width: 40%;
-    height: 60%;
+    border-bottom: 2px solid transparent;
   }
 
   .block-3 {
-    bottom: 0;
-    left: 0;
-    width: 40%;
-    height: 60%;
+    border-top: 2px solid transparent;
   }
 
   .block-4 {
-    right: 0;
-    bottom: 0;
-    width: 60%;
-    height: 40%;
+    border-left: 2px solid transparent;
   }
 
   .block-center {
-    z-index: 1;
     top: 40%;
     left: 40%;
-    width: 20%;
-    height: 20%;
-    background: white;
+    border: 2px solid transparent;
   }
 }
